<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recently Viewed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_profile_recently_viewed"
            android:layout_width="match_parent"
            android:layout_height="128dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Favorites" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_profile_favorites"
            android:layout_width="match_parent"
            android:layout_height="128dp" />

        <Button
            android:id="@+id/button_profile_add_recipe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            android:text="Add Recipe" />

        <Button
            android:id="@+id/button_profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Logout"/>
    </LinearLayout>
</ScrollView>
