...
           android:background="@drawable/category_background"
           android:text="@string/dessert_category_button" />

   </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:paddingBottom="?attr/actionBarSize"/>

</LinearLayout>
...
